# faqt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  coverage.lcov  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_extended.txt  setup.py
.github/workflows/: tests.yml
docs/source/: conf.py  faqt.model.faq_matching.rst  faqt.model.rst  faqt.model.urgency_detection.rst  faqt.preprocessing.rst  faqt.rst  faqt.scoring.rst  index.rst  modules.rst  tests.rst  usage.rst
faqt/: __init__.py  scoring_functions.py  utils.py
faqt/model/: __init__.py  embeddings.py  keyword_rule_matching_model.py  models.py  topic_models.py
faqt/model/faq_matching/: __init__.py  bert.py  contextualisation.py  contextualization.py  keyed_vector_scoring.py  keyed_vectors_scoring.py
faqt/model/urgency_detection/: keyword_rule_matching_model.py  urgency_detection_base.py
faqt/preprocessing/: __init__.py  methods.py  text.py  text_processing.py  tokens.py
faqt/scoring/: reduce.py  score_weighting.py  single_tag_scoring.py  tag_scoring.py
faqt/scripts/: save_prenormalized_model.py
notebooks/: Multiple_tagsets.ipynb  Untitled.ipynb  Untitled1.ipynb
tests/: conftest.py  readme.md  test_bert_questionanswer_scorer.py  test_embedding.py  test_faq_scorer.py  test_faqt_model.py  test_keyword_rule_scorer.py  test_misspelling.py  test_preprocess_methods.py  test_preprocess_text.py  test_preprocess_tokens.py  test_scoring.py  test_scoring_functions.py  test_stepwise_keyed_vector_scorer.py  test_tag_scoring_functions.py  test_text_processing.py  test_topic_scorer.py  utils.py
tests/data/: contextualization.yaml  faq_data.yaml  pretrained_wv_models  sequence_classification_models  tag_test_data.yaml  tests  topics_data.yaml
tests/test_models/: test_contextualisation.py  test_contextualization.py  test_keyed_vectors_scoring.py  test_keyed_vectors_search.py  test_keyword_rule_scorer.py  test_ml_ud_scorer.py  test_question_answer_bert_scorer.py  test_stepwise_keyed_vector_scorer.py  test_stepwise_keyed_vectors_scorer.py  test_wmd_scorer.py
tests/test_preprocessing/: test_misspelling.py  test_preprocess_methods.py  test_preprocess_text.py  test_preprocess_tokens.py
tests/test_scoring/: test_score_reduction_functions.py  test_score_weighting_functions.py  test_tag_scoring_functions.py
