[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "faqt"
description = "Add an NLP layer over your FAQs"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["faq", "nlp"]
authors = [
    {name = "IDinsight"}
]
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = ["faqt"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "faqt.__version__"}

[project.optional-dependencies]
bert = [
    "transformers==4.17.0",
    "torch==1.10.2"
]
hunspell = [
    "cyhunspell==2.0.2"
]
dev = [
    "black==22.6.0",
    "flake8==3.9.0",
    "isort==5.8.0",
    "pre-commit>=2.11.1",
    "pytest>=6.2.2",
    "coverage>=6.3.2",
    "cyhunspell==2.0.2",
    "smart-open[s3]>=5.0.0",
    "sphinx==4.5.0",
    "sphinx-material==0.0.35",
    "numpydoc==1.2",
    "transformers==4.17.0",
    "torch==1.10.2"
]

[tool.isort]
profile = "black"
src_paths = ["src", "api_demo_apicall", "api_faq_db", "api_model"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rPaq"
testpaths = ["tests"]
python_files = ["*.py"]
markers = ["slow: mark test as slow", "fast: mark test as fast"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning"
]
